# llm-mermaid-chat

./: .gitignore  CLAUDE.md  Dockerfile.backend  Dockerfile.frontend  LICENSE  README.md  biome.json  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
.claude/skills/a11y/: SKILL.md
.claude/skills/e2e/: SKILL.md
.claude/skills/storybook/: SKILL.md
.claude/skills/styling/: SKILL.md
.claude/skills/testing/: SKILL.md
.github/workflows/: ci.yml  deploy.yml  e2e.yml
backend/: .env.example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1057950ea7b4_initial_diagrams_table.py
backend/src/mermaid_llm/: __init__.py  config.py  main.py
backend/src/mermaid_llm/api/: error_codes.py  schemas.py
backend/src/mermaid_llm/api/routers/: diagram.py
backend/src/mermaid_llm/db/: __init__.py  models.py  session.py
backend/src/mermaid_llm/graph/: __init__.py  build_graph.py  state.py
backend/src/mermaid_llm/graph/nodes/: autofix.py  detect.py  generate.py  validate.py
backend/src/mermaid_llm/llm/: __init__.py  client.py
backend/src/mermaid_llm/services/: __init__.py  diagram_repository.py
backend/tests/: conftest.py
backend/tests/integration/: test_diagram_api.py  test_diagram_db.py
backend/tests/unit/graph/: test_autofix.py  test_detect.py  test_generate.py  test_validate.py
docs/: deploy.md
frontend/apps/client-app/: index.html  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
frontend/apps/client-app/e2e/: diagram.spec.ts  fixtures.ts
frontend/apps/client-app/playwright-report/: index.html
frontend/apps/client-app/src/: App.css  App.tsx  main.tsx
frontend/apps/client-app/src/components/: ChatHistory.tsx  ChatInput.tsx  ChatPanel.tsx  ConnectionStatus.tsx  DiagramPanel.tsx  DiagramTypeSelector.tsx  ErrorDisplay.tsx
frontend/apps/client-app/src/core/: DiagramStateManager.ts  SSEConnectionManager.ts  index.ts
frontend/apps/client-app/src/hooks/: useSSEStream.ts
frontend/apps/client-app/src/store/: DiagramStore.ts  index.ts  useDiagramStore.ts
frontend/apps/client-app/src/stores/: chatStore.ts
shared-config/: package.json
shared-config/biome/: biome.v2.json
specs/: main.tsp  package.json
specs/models/: diagram.tsp  error.tsp  sse.tsp
specs/operations/: diagram.tsp  health.tsp
specs/tsp-output/: openapi.yaml
